--- a/CustomerMS.yml
+++ b/CustomerMS.yml
@@ -1,7 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/infytel-customer
-friend:
+    url: jdbc:h2:mem:testdb
   uri: http://localhost:8300/customers/
 path: 
   uri: http://localhost:8400/plans/
