--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driverClassName: org.h2.Driver
+    driver-class-name: org.h2.Driver
     username: sa
     password: 
   jpa: 
