--- a/CustomerMS.yml
+++ b/CustomerMS.yml
@@ -1,6 +1,4 @@
-spring:
-  datasource:
-    url: jdbc:h2:mem:testdb
-  uri: http://localhost:8300/customers/
+friend:
+ uri: http://localhost:8300/customers/
 path: 
   uri: http://localhost:8400/plans/
