--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -1,1 +1,3 @@
-
+friend.uri=http://localhost:8300/customers/
+plan.uri=http://localhost:8400/plans/
+spring.jackson.default-property-inclusion: NON_NULL
