--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -1,4 +1,11 @@
 friend.uri=http://localhost:8300/customers/
 plan.uri=http://localhost:8400/plans/
 spring.jackson.default-property-inclusion= NON_NULL
+spring.datasource.url=jdbc:mysql://localhost:3306/infytel-customer
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
 
