--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -4,7 +4,7 @@ spring.jackson.default-property-inclusion= NON_NULL
 spring.datasource.url = jdbc:mysql://localhost:3306/infytel-customer
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.driverclassname = com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
